[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "estevaoMG",email = "estevao.gouveia@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
